<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/oneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/oneBtn"
        android:textSize="20sp"
        app:backgroundTint="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numTextView" />

    <Button
        android:id="@+id/fiveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/fiveBtn"
        android:textSize="20sp"
        app:backgroundTint="#2196F3"
        app:layout_constraintStart_toStartOf="@+id/oneBtn"
        app:layout_constraintTop_toBottomOf="@+id/oneBtn" />

    <Button
        android:id="@+id/tenBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/tenBtn"
        android:textSize="20sp"
        app:backgroundTint="#2196F3"
        app:layout_constraintStart_toStartOf="@+id/fiveBtn"
        app:layout_constraintTop_toBottomOf="@+id/fiveBtn" />

    <Button
        android:id="@+id/fiftyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/fiftyBtn"
        android:textSize="20sp"
        app:backgroundTint="#2196F3"
        app:layout_constraintStart_toStartOf="@+id/tenBtn"
        app:layout_constraintTop_toBottomOf="@+id/tenBtn" />

    <Button
        android:id="@+id/hundredBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/hundredBtn"
        android:textSize="20sp"
        app:backgroundTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fiftyBtn"
        app:layout_constraintTop_toBottomOf="@+id/fiftyBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="132dp"
        android:layout_height="52dp"
        android:layout_marginBottom="56dp"
        android:text="@string/saveBtn"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/numTextView"
        android:layout_width="185dp"
        android:layout_height="100dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:text="@string/numTextView"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081"
        android:autofillHints="" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetBtn"
        android:textSize="20sp"
        app:backgroundTint="#EF0E0E"
        app:layout_constraintBottom_toTopOf="@+id/saveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.767"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numTextView"
        app:layout_constraintVertical_bias="0.902" />

</androidx.constraintlayout.widget.ConstraintLayout>